--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,10 @@
     <style name="Base.Theme.Map" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:background">#FFFFFF</item>
+        <item name="colorPrimary">#0A2647</item>
+        <item name="colorPrimaryDark">#144272</item>
+        <item name="colorAccent">#2C74B3</item>
     </style>
 
     <style name="Theme.Map" parent="Base.Theme.Map" />
