--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -1,72 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="80dp">
 
-    <data>
-        <variable
-            name="place"
-            type="campus.tech.kakao.map.model.Place" />
-    </data>
+    <ImageView
+        android:id="@+id/location_image_view"
+        android:layout_width="50dp"
+        android:layout_height="65dp"
+        android:src="@drawable/baseline_location_pin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp">
+    <TextView
+        android:id="@+id/place_category_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
+        android:text="@{place.category}"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/location_image_view"
-            android:layout_width="50dp"
-            android:layout_height="65dp"
-            android:src="@drawable/baseline_location_pin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/place_name_text_view"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="5dp"
+        android:text="@{place.name}"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/place_category_text_view"
+        app:layout_constraintStart_toEndOf="@id/location_image_view"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/place_category_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:text="@{place.category}"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/place_address_text_view"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:text="@{place.address}"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toStartOf="@id/place_category_text_view"
+        app:layout_constraintStart_toEndOf="@id/location_image_view"
+        app:layout_constraintTop_toBottomOf="@id/place_name_text_view" />
 
-        <TextView
-            android:id="@+id/place_name_text_view"
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
-            android:text="@{place.name}"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@id/place_category_text_view"
-            app:layout_constraintStart_toEndOf="@id/location_image_view"
-            app:layout_constraintTop_toTopOf="parent" />
+    <View
+        android:id="@+id/item_place_division"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/colorDivision"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/place_address_text_view"
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:text="@{place.address}"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toStartOf="@id/place_category_text_view"
-            app:layout_constraintStart_toEndOf="@id/location_image_view"
-            app:layout_constraintTop_toBottomOf="@id/place_name_text_view" />
-
-        <View
-            android:id="@+id/item_place_division"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="@color/colorDivision"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
