--- a/app/src/main/res/layout/place_module.xml
+++ b/app/src/main/res/layout/place_module.xml
@@ -28,12 +28,18 @@
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            app:layout_constrainedWidth="true"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
             android:text="@{data.name}"
-            android:textSize="25sp"
+            android:textSize="20sp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintEnd_toStartOf="@id/category"
             app:layout_constraintStart_toEndOf="@id/location"
             app:layout_constraintTop_toTopOf="parent" />
 
