--- a/app/src/main/res/layout/horitem_recyclerview.xml
+++ b/app/src/main/res/layout/horitem_recyclerview.xml
@@ -6,10 +6,11 @@
     xmlns:andriod="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/Box"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
         <TextView
