--- a/app/src/main/res/layout/item_recyclerview.xml
+++ b/app/src/main/res/layout/item_recyclerview.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id = "@+id/box"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,19 +27,20 @@
             app:layout_constraintLeft_toLeftOf="@id/box"
             app:layout_constraintBottom_toBottomOf="@id/box"
             />
+
         <TextView
             android:id="@+id/Name"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
             android:text="약국1"
             android:textSize="20sp"
-            android:layout_marginRight="270dp"
-            android:layout_marginBottom="15dp"
-            app:layout_constraintTop_toTopOf="@id/box"
+            android:layout_marginLeft="20dp"
             app:layout_constraintBottom_toBottomOf="@id/box"
-            app:layout_constraintRight_toRightOf="@id/box"
+            app:layout_constraintHorizontal_bias="0.476"
             app:layout_constraintLeft_toRightOf="@id/Pin"
-            />
+            app:layout_constraintTop_toTopOf="@id/box"
+            app:layout_constraintVertical_bias="0.551" />
 
         <TextView
             android:id="@+id/Address"
@@ -47,11 +48,10 @@
             android:layout_height="wrap_content"
             android:text="대구 경북구 어쩌고"
             android:textSize="14sp"
-            android:layout_marginRight="210dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginBottom="10dp"
             app:layout_constraintTop_toBottomOf="@id/Name"
             app:layout_constraintBottom_toBottomOf="@id/box"
-            app:layout_constraintRight_toRightOf="@id/box"
             app:layout_constraintLeft_toRightOf="@id/Pin"
             />
         <TextView
@@ -60,12 +60,12 @@
             android:layout_height="wrap_content"
             android:text="약국"
             android:textSize="17sp"
-            android:layout_marginLeft="330dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginBottom="15dp"
             app:layout_constraintTop_toTopOf="@id/box"
             app:layout_constraintBottom_toBottomOf="@id/box"
             app:layout_constraintRight_toRightOf="@id/box"
-            app:layout_constraintLeft_toLeftOf="@id/box"
+            app:layout_constraintLeft_toRightOf="@id/Name"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
